Changelog:
30/04/2023 -
-Added Django framework for creating web app to run the python script.
-Added Django App "comparison".
-Added "comparison/views.py" to include text to welcome people to a page.
-Added "comparison/urls.py" to include url pattern.
-Added "BB_Weapons_test_site/urls.py" to include url pattern to "comparison/urls.py".
-Changed "BB_Weapons_test_site/settings.py" so that the timezone is set to Australia/Melbourne and language is en-au.
-Added migrations using the "py manage.py migrate" command.
-Added class in "comaprison/models.py" called weapons with the following variables: weapon_name, min_damage, max_damage, ignore_armour, eff_armour, fatigue.

-Added 'comparison.apps.ComparisonConfig' in INSTALLED_APPS list in "BB_Weapons_test_site/settings.py".

29/04/2023 - 
-Added program that will compare two weapons against each other.
-Added dictionary of 3 weapons with stats - Hammer, Goedendag, Milita spear.
-Added the comparison as a function that requires two arguments. These arguments are the two weapons for comparison. 
-Added weapons dictionary to keep track of the amount of turns it took a weapon to defeat an enemy.  
- Added modifier variable which is needed for the damage calculations it can be changed in the game but for now it is left as 1.
-Added an overall dictionary that keeps track of statistics of the weapons over the many iterations. "weapon name" = the name of the weapon being compared. "wins" = how many times the weapon has defeated the enemy the quickest or drawed. "fatigue" = the max amount of fatigue the weapon has spent to defeat an enemy.
-Added a for loop that simulates 10000 comparisons as the weapons have a damage range and should provide the weapon that wins the most on average.