@@ -1,0 +1,25 @@
+# Generated by Django 4.2 on 2023-05-01 06:17
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    initial = True
+
+    dependencies = [
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Weapons',
+            fields=[
+                ('weapon_name', models.CharField(max_length=100, primary_key=True)),
+                ('min_damage', models.PositiveSmallIntegerField()),
+                ('max_damage', models.PositiveSmallIntegerField()),
+                ('ignore_armour', models.DecimalField(decimal_places=2, max_digits=5)),
+                ('eff_armour', models.DecimalField(decimal_places=2, max_digits=5)),
+                ('fatigue', models.PositiveSmallIntegerField()),
+            ],
+        ),
+    ]
