@@ -1,0 +1,18 @@
+# Generated by Django 4.2 on 2023-05-01 06:53
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('comparison', '0001_initial'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='weapons',
+            name='weapon_name',
+            field=models.CharField(max_length=100, primary_key=True, serialize=False),
+        ),
+    ]
