@@ -1,0 +1,7 @@
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Welcome!</h1>
+        <p>To my battle brothers weapon comparison page.</p>
+    </body>
+</html>
