@@ -1,7 +1,9 @@
 from django.shortcuts import render
 from django.http import HttpResponse
+from django.template import loader
 
-def index(request):
-    return HttpResponse("Hello, World. You're at the weapons comparison page")
+def front_page(request):
+    template = loader.get_template('front_page.html')
+    return HttpResponse(template.render())
 
 
